# solvedac-readme-badge

./: .env_example  .gitignore  Makefile  Procfile  README.md  REFACTORING_SUMMARY.md  app.py  config.py  gunicorn.config.py  index.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_refactored_api.py  test_simple.sh  vercel.json
app/: __init__.py  dependencies.py  schemas.py
app/api/: __init__.py  generate.py  routes.py  views.py
app/component/: Badge.py  __init__.py  badge.py  card.py  colorset.py  options.py  theme.py  tier.py  utils.py
app/factories/: __init__.py  badge_factory.py  size_factory.py
app/generate/: __init__.py  routes.py  views.py
app/services/: __init__.py  badge_service.py  user_service.py
app/solvedac/: Badge.py  SolvedacFetcher.py  User.py  __init__.py  fetcher.py  helper.py  rank.py  solvedac_badge.py  solvedacfetcher.py  tier.py  user.py
app/static/css/: common.css
app/static/js/: common.js
app/static/js/highlight/: highlight.min.js
app/templates/: index.html
app/tests/: test_badge.py  test_fetching_data.py
tests/: template.py  test_api.py  test_fetching_data.py  test_render.py
